Bug 235690 - mozilla menu items' AtkAction interface is nonfunctional r=pkw@us.ibm.com, sr=Henry.Jia@sun.com, a=chofmann@mozilla.org Patch contributed by Louie Zhao <Louie.Zhao@sun.com>.